tests/errors/binding/event.fil
comp Add<G:1>(@[T, T+1] in: 32) -> () {}